--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -10,7 +10,8 @@
 	<!--<div class="widget tn"><a href="http://www.tequila.net/" target="_blank"><img src="http://tequilaofthemonth.com/wp-content/uploads/2014/02/tequila-net-logo.png" class="alignnone" width="350" height="60" /></a></div> -->
 	<!-- <div class="widget one-with-life"><a href="http://www.onewithlifetequila.com/" target="_blank"><img src="/assets/img/owl-tequila.jpg"/></a></div> -->
     <div class="widget gran"><a href="https://www.tequilagrandovejo.com/" target="_blank"><img src="/assets/img/gran2.jpg"/></a></div>
-	<div class="widget alquimia"><a href="http://tequilaalquimia.com/" target="_blank"><img src="/assets/img/alquimia.jpg"/></a></div>
+	<div class="widget suave"><a href="http://www.suavespirits.com/" target="_blank"><img src="/assets/img/suave-white.jpg"/></a></div>
+    <!--<div class="widget alquimia"><a href="http://tequilaalquimia.com/" target="_blank"><img src="/assets/img/alquimia.jpg"/></a></div>-->
 	<!-- <div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/" target="_blank"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div> -->
 	<!-- <div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/" target="_blank"><img src="http://www.mrlatinomagazine.com/nyc/images/ML_headers/nyc_headimage.jpg"/></a></div> -->
 <!-- 
@@ -26,8 +27,9 @@
 		<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/" target="_blank"><img src="https://tequilasnob.files.wordpress.com/2010/06/fortaleza.gif"/></a></div>
 		<div class="widget g4"><a href="http://g4tequila.life/" target="_blank"><img src="/assets/img/g4-new.jpg"/></a></div>
 		<div class="widget t1"><a href="https://www.facebook.com/t1tequila/" target="_blank"><img src="/assets/img/t1-new2.png"/></a></div>
-		<div class="widget calle23"><a href="http://www.tequilacalle23.com/" target="_blank"><img src="/assets/img/calle23-agave.jpg"/></a></div>
-		<div class="widget grand-mayan"><a href="http://www.gmtequila.com/site/" target="_blank"><img src="/assets/img/grand-mayan.png"/></a></div>
+		<div class="widget calle23"><a href="//www.tequilacalle23.com/" target="_blank"><img src="/assets/img/calle23-square.jpg"/></a></div>
+		<div class="widget azunia"><a href="//azuniatequila.com/" target="_blank"><img src="/assets/img/azunia.png"/></a></div>
+		<div class="widget elrey"><a href="http://www.tequilaelrey.com/" target="_blank"><img src="/assets/img/elrey-black.png"/></a></div>
 		<!--<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila" target="_blank"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>-->
 		<!-- <div class="widget oro-de-lidia"><a href="http://www.tequilaorodelidia.com/" target="_blank"><img src="/assets/img/oro-de-lidia-bottles.jpg"/></a></div>-->
         <div class="widget uno"><a href="http://unoporfavor.com/" target="_blank"><img src="/assets/img/uno.jpg"/></a></div>
@@ -42,6 +44,8 @@
 		<div class="widget don-alberto"><a href="http://donalberto.mx/" target="_blank"><img src="/assets/img/don-alberto2.png"/></a></div>
 		<div class="widget arette"><a href="https://www.facebook.com/Arette.Tequila/" target="_blank"><img src="/assets/img/arette3.png"/></a></div>
 		<div class="widget maracame"><a href="http://maracametequila.com/" target="_blank"><img src="/assets/img/moracame.png"/></a></div>
+        <div class="widget sangre"><a href="http://www.sangredevida.com/" target="_blank"><img src="/assets/img/sangre.jpg"/></a></div>
+        <div class="widget grand-mayan"><a href="http://www.gmtequila.com/site/" target="_blank"><img src="/assets/img/grand-mayan.png"/></a></div>
 		<!--<div class="widget suerte"><a href="http://drinksuerte.com/" target="_blank"><img src="/assets/img/suerte-logo.jpg"/></a></div>-->
 		<!--<div class="widget matchmaker"><a href="http://tequilamatchmaker.com/" target="_blank"><img src="/assets/img/tequila-matchmaker.jpg"/></a></div>-->
 	</div>
